# otto-reviewer

./: .env.example  .env.swp  .gitignore  .otto_settings.json.swp  .runtime-server.md.swp  MONETIZATION_PLAN.md  README.md  TOOL_EXECUTION_GUIDE.md  business.md  examples.ts  hello_world.py  matmul_mpi.cpp  mem0.ts  mem0_mechanism.md  otto_settings.json  package-lock.json  package.json  pi-agent-utils.ts  pi-agent.ts  pi-orchestrator.ts  quick-start.ts  raw-agent.ts  result.txt  runtime-server.md  test-claude-code-agent-runtime.sh  test-simple.ts  test.sh  to-rethink.md  tsconfig.json  workflow_interfaces_tools.ts
claude-code-agents.ts/: claude-code-agent.ts
database/: connection.js  index.js  package-lock.json  package.json  seed-sample-tools.js  seed.js  server.js  test-api.sh  test-tools.js
mcp/: README.md
nanogpt/: .gitignore  HOW_TO_BUILD.md  Makefile  README.md  pyproject.toml  requirements.txt
nanogpt/configs/: gpt2_124M.yaml  gpt2_124M_debug.yaml  shakespeare_char.yaml
nanogpt/scripts/: launch_ddp.sh  launch_local.sh
nanogpt/scripts/aws/: bootstrap.sh  prep-userdata.sh  train-userdata.sh
nanogpt/src/: data.py  eval_hellaswag.py  model.py  prepare_fineweb.py  prepare_shakespeare.py  sample.py  train.py  utils.py
nanogpt/tests/: conftest.py  test_attention_equivalence.py  test_dataloader_disjoint.py  test_from_pretrained_logits.py  test_model_shapes.py  test_optim_param_groups.py
otto_tokenizer/: HOW_TO_RUN.md  PLAN.md  test_tokenizer.py  tokenizer.py
runtime/: .runtime_details.md.swp  MPI_INDEX.md  MPI_RESULTS_REPORT.md  TEST_SUMMARY.txt  state.ts  (+16 more)
(+88 files in other folders)
