[project]
name = "nanogpt"
version = "0.1.0"
description = "From-scratch reproduction of GPT-2 (124M) following Karpathy's build-nanogpt."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "numpy",
    "tiktoken",
    "tqdm",
    "pyyaml",
    "requests",
    "datasets",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest", "transformers"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
